--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@ducanh2912/next-pwa": "^8.2.0",
     "@react-three/drei": "^9.65.3",
     "@react-three/fiber": "^8.12.0",
+    "@types/three": "^0.150.2",
     "glsl-random": "^0.0.5",
     "next": "^13.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.151.3",
     "three-stdlib": "^2.21.8",
-    "tunnel-rat": "^0.1.2"
+    "tunnel-rat": "^0.1.2",
+    "webpack": "^5.80.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.3.0",
